--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Paulinha Az. - Conteúdo Artístico +18</title>
+    <meta
+      name="description"
+      content="Explore fotos e vídeos com mistério, elegância e exclusividade. Conteúdo artístico +18."
+    />
+    <meta name="theme-color" content="#E91E63" />
+
+    <!-- Favicon -->
     <link
       rel="icon"
       type="image/png"
       href="https://res.cloudinary.com/dt9m3pkjv/image/upload/v1745119915/ico_fd03yx.png"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <title>Paulinha Az. - Conteúdo Artístico +18</title>
-    <meta
-      name="description"
-      content="Explore fotos e vídeos com mistério e elegância. Exclusivo para +18"
+
+    <!-- Boxicons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
     />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Paulinha Az. - Conteúdo Artístico +18" />
+    <meta
+      property="og:description"
+      content="Acesse conteúdos exclusivos com elegância e liberdade. Para maiores de 18 anos."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dt9m3pkjv/image/upload/v1743376993/PAULA/geznhhqtqhe7fj0obmj3.png"
+    />
+    <meta property="og:url" content="https://paulaazevedo.site" />
+    <meta property="og:type" content="website" />
+
+    <!-- Accessibility & SEO -->
+    <meta name="robots" content="noindex,nofollow" />
   </head>
-  <body>
+  <body class="bg-black text-white font-sans antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
